[package]
name = "social-media-video-downloader-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
teloxide = { version = "0.14.1", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
openssl = { version = "0.10.35", features = ["vendored"] }
anyhow = "1.0.97"
